# GameBoy

./: .gitignore  CMakeLists.txt  MMU.ts  Makefile  README.md  cpu.h  main.c  main.ts  memory.h  memoryUnit.h  registers.h  set_env.sh  z80.ts
experiment/: MMU.ts  z80.ts
include/: cpu.h  fetch_decode.h  gpu.h  keypad.h  log.h  memoryUnit.h  registers.h  screen.h
src/: CMakeLists.txt  cpu.c  cpu.h  fetch_decode.c  gpu.c  gpu.h  keypad.c  main.c  memoryUnit.c  memoryUnit.h  registers.c  registers.h  screen.c
tests/roms/: test0.gb  test0.hex
